[package]
name = "gtl"
version = "2.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
lto = true
strip = true
codegen-units = 1

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
exitcode = "1.1.2"
size = "0.4.1"
