[package]
name = "gtl"
version = "2.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
lto = true
strip = true
codegen-units = 1

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.1.1"
exitcode = "1.1.2"
size = "0.5.0"
